--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-6 p-3">
           <div class="w-100 p-4" style="height: 500px; overflow: scroll; overflow-x: hidden; border:1px solid rgb(42, 184, 148);">
-            <p id="outputSubtitleHandled" style="font-size: 11px;"></p>
+            <p class="m-0" id="outputSubtitleHandled" style="font-size: 11px;"></p>
           </div>
         </div>
       </div>
